Fix footer overlap #848
- Added footer responsive layout for tablets too
- Fixed footer ovelap on Laptop media screen

--- a/static/themes/default/css/responsive.css
+++ b/static/themes/default/css/responsive.css
@@ -2,7 +2,7 @@
 /* Responsive queries */
 /* Smartphone */
 
-@media screen and (max-width: 660px) {
+@media only screen and (min-width: 320px) and (max-width: 768px) {
     footer{
         position: relative;
     }
